<resources>
    <string name="app_name">Workaholic!</string>
    <string name="image_contentDescription">worker</string>
    <string name="tv_text1">Let\'s Do Some Work</string>
    <string name="tv_text2">Collaborate and Plan Together Across Multiple
        Devices on Workaholic Minimalistic Application</string>

    <string name="btn_text1">SIGN IN</string>
    <string name="text_for_sign_up">Don\'t have an account?</string>
    <string name="btn_text2">SIGN UP</string>
    <string name="btn_text2_underline"><u>SIGN UP</u></string>

    <string name="sign_up_description_text">Enter your name, email id and password
        to register with us</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>

    <string name="sign_in_description_text">Enter your email id and password</string>

    <string name="please_click_again_to_exit">Please click again to exit</string>
    <string name="please_wait">Please Wait&#8230;</string>

    <string name="nav_my_profile">My Profile</string>
    <string name="nav_sign_out">Sign Out</string>

    <string name="mobile">Mobile</string>
    <string name="update">UPDATE</string>
    <string name="my_profile">My Profile</string>

    <string name="create_board">Create Board</string>
    <string name="create_board_message">Tap to create a Board</string>
    <string name="board_name">BOARD NAME</string>
    <string name="btn_create_board">CREATE</string>

    <string name="no_boards_available">No Boards are available!!</string>

    <string name="add_item_to_list">Add List</string>
    <string name="hint_list_name">List Name</string>
    <string name="action_add_card">Add Card</string>
    <string name="hint_card_name">Card Name</string>
    <string name="add_task">Add Task</string>

    <string name="members">Members</string>

    <string name="add_member">Add Member</string>
    <string name="cancel">CANCEL</string>
    <string name="add">ADD</string>

    <string name="card_name">Card Name</string>
    <string name="label_color">Label Color</string>
    <string name="select_color">Select Label Color</string>
    <string name="select_members">Select Members</string>
    <string name="due_date">Due Date</string>
    <string name="due_by">Due By :</string>
    <string name="select_due_date">Select Due Date</string>
    <string name="update_card">Update Card</string>
    <string name="delete_card">Delete Card</string>
    
    <string name="default_notification_channel_id">Workaholic_notification_channel_id</string>
    <string name="msg_token_fmt">msg for token</string>

</resources>