<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        app:cardCornerRadius="3dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="10dp">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_dialog_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_member"
                android:textSize="20sp"
                android:textColor="@color/primary_text_color"
                android:textStyle="bold">

            </androidx.appcompat.widget.AppCompatTextView>

            <View
                android:layout_width="match_parent"
                android:layout_height="0.8dp"
                android:layout_marginTop="10dp"
                android:background="@color/divider_color">

            </View>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_search_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/primary_text_color"
                    android:textSize="16sp"
                    tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize">

                </androidx.appcompat.widget.AppCompatEditText>

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_add"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/add"
                    android:textColor="#1976D2"
                    android:textSize="16sp">

                </androidx.appcompat.widget.AppCompatTextView>

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_cancel"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:padding="10dp"
                    android:text="@string/cancel"
                    android:textColor="#757575"
                    android:textSize="16sp">

                </androidx.appcompat.widget.AppCompatTextView>

            </LinearLayout>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>