<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center_horizontal"
    android:background="@drawable/ic_background"
    tools:context=".activity.SignUpActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_sign_up"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_text3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:text="@string/btn_text2"
            android:textColor="@color/primary_text_color"
            android:textSize="18sp"
            android:textStyle="bold">

        </androidx.appcompat.widget.AppCompatTextView>

    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="80dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:text="@string/sign_up_description_text"
            android:textAlignment="center"
            android:textColor="@color/primary_text_color"
            android:textSize="18sp">

        </androidx.appcompat.widget.AppCompatTextView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:layout_marginStart="40dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="40dp"
            android:elevation="40dp"
            app:cardCornerRadius="8dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:background="#e9ecef"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"
                    android:textColorHint="@color/black">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/tv_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/black"
                        android:hint="@string/name"
                        android:inputType="textPersonName"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize">

                    </androidx.appcompat.widget.AppCompatEditText>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginEnd="5dp"
                    android:textColorHint="@color/black">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/tv_email1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/black"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize">

                    </androidx.appcompat.widget.AppCompatEditText>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="7dp"
                    android:layout_marginEnd="5dp"
                    android:textColorHint="@color/black">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/tv_password1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:backgroundTint="@color/black"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColor="@color/black"
                        android:textSize="16sp"
                        tools:ignore="TouchTargetSizeCheck,VisualLintTextFieldSize">

                    </androidx.appcompat.widget.AppCompatEditText>

                </com.google.android.material.textfield.TextInputLayout>

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/btn_sign_up2"
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="15dp"
                    android:background="@drawable/ic_blue_rounded_button"
                    android:text="@string/btn_text2"
                    android:textColor="@color/white"
                    tools:ignore="DuplicateSpeakableTextCheck,TextContrastCheck">

                </androidx.appcompat.widget.AppCompatButton>

            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>


</LinearLayout>